Setup Cesium and Google APIs. Ignore API key file in gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -96,3 +96,4 @@ crashlytics-build.properties
 /[Aa]ssets/[Ss]treamingAssets/aa/*
 
 Docs/INTERNAL_CONTRIBUTING.md
+Assets/StreamingAssets/api_key.txt
