--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "com.cesium.unity": "1.16.0",
     "com.meta.xr.sdk.all": "74.0.3",
+    "com.unity.2d.sprite": "1.0.0",
     "com.unity.ai.navigation": "2.0.7",
     "com.unity.collab-proxy": "2.8.1",
     "com.unity.ide.rider": "3.0.36",
