--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "com.cesium.unity": "1.16.0",
     "com.meta.xr.sdk.all": "74.0.3",
+    "com.meta.xr.sdk.core": "76.0.1",
     "com.unity.2d.sprite": "1.0.0",
     "com.unity.ai.navigation": "2.0.7",
     "com.unity.collab-proxy": "2.8.1",
@@ -17,6 +18,7 @@
     "com.unity.timeline": "1.8.7",
     "com.unity.ugui": "2.0.0",
     "com.unity.visualscripting": "1.9.6",
+    "com.unity.xr.interaction.toolkit": "3.1.2",
     "com.unity.xr.management": "4.5.1",
     "com.unity.xr.meta-openxr": "2.1.0",
     "com.unity.xr.openxr": "1.14.3",
